<resources>
    <string name="app_name">Capstone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for toolbar -->
    <string name="toolbar_title">Apex Legends</string>

    <!-- Strings used for menu -->
    <string name="page_home">Home</string>
    <string name="page_search">Search</string>
    <string name="page_profile">Profile</string>

    <!-- Strings used for homepage -->
    <string name="tv_news">Link to the news</string>
    <string name="tv_status">Link to the status</string>
    <string name="tv_twitter">Link to Twitter</string>
    <string name="tv_twitch">Link to Twitch</string>

    <!-- Strings used for confirmation-->
    <string name="tv_confirmation">Are you sure you want to open the link?</string>
    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_no">No</string>

    <!-- Strings used for searching account -->
    <string name="hint_platform">Steam, Xbox Live, Playstation or Origin ID</string>
    <string name="et_platform">Please fill in an account.</string>
    <string name="et_account">Account</string>

    <!-- Strings used for player profile -->
    <string name="tv_player_name">%s</string>
    <string name="btn_set_profile">Set profile</string>

    <!-- Strings used for the tabs -->
    <string name="tab_overview">Overview</string>
    <string name="tab_legends">Legends</string>
    <string name="tab_matches">Recent Matches</string>

    />

</resources>